# ca_p2

./: .gitignore  CMakeLists.txt  README.md  imageaos.cpp  imagesoa.cpp
TIME_GAUSS/TEST1/: slurm-30538.out  slurm-30539.out  slurm-30540.out  slurm-30541.out
TIME_GAUSS/TEST2/: slurm-30546.out  slurm-30547.out  slurm-30548.out  slurm-30549.out
TIME_GAUSS/TEST3/: slurm-30556.out  slurm-30557.out  slurm-30558.out  slurm-30559.out
TIME_GAUSS/TEST4/: slurm-30569.out  slurm-30570.out  slurm-30571.out  slurm-30572.out
TIME_GAUSS/TEST5/: slurm-30574.out  slurm-30575.out  slurm-30576.out  slurm-30577.out
TIME_HISTO/TEST1/: slurm-30615.out  slurm-30616.out  slurm-30617.out  slurm-30618.out
TIME_HISTO/TEST2/: slurm-30627.out  slurm-30628.out  slurm-30629.out  slurm-30630.out
TIME_HISTO/TEST3/: slurm-30656.out  slurm-30657.out  slurm-30658.out  slurm-30659.out
TIME_HISTO/TEST4/: slurm-30663.out  slurm-30664.out  slurm-30665.out  slurm-30666.out
TIME_HISTO/TEST5/: slurm-30669.out  slurm-30670.out  slurm-30671.out  slurm-30672.out
TIME_MONO/TEST1/: slurm-30676.out  slurm-30677.out  slurm-30678.out  slurm-30679.out
TIME_MONO/TEST2/: slurm-30683.out  slurm-30684.out  slurm-30685.out  slurm-30686.out
TIME_MONO/TEST3/: slurm-30700.out  slurm-30701.out  slurm-30702.out  slurm-30703.out
TIME_MONO/TEST4/: slurm-30715.out  slurm-30716.out  slurm-30717.out  slurm-30718.out
TIME_MONO/TEST5/: slurm-30719.out  slurm-30720.out  slurm-30721.out  slurm-30722.out
aos/: CMakeLists.txt  bitmap_aos.cpp  bitmap_aos.hpp
common/: CMakeLists.txt  bitmap_header.cpp  bitmap_header.hpp  file_error.cpp  file_error.hpp  histogram.cpp  histogram.hpp  imgcmd.hpp  normalized_pixel.cpp  normalized_pixel.hpp  pixel.cpp  pixel.hpp  progargs.cpp  progargs.hpp
soa/: CMakeLists.txt  bitmap_soa.cpp  bitmap_soa.hpp
utest/: CMakeLists.txt  bitmap_header_test.cpp  bitmap_test.cpp  file_error_test.cpp  histogram_test.cpp  pixel_test.cpp  progargs_test.cpp
